# Deeplabcut-CPP

./: .dockerignore  .gitignore  DEPLOYMENT_REQUIREMENTS.md  Dockerfile  README.md  environment.base.yml  environment.full.yml  environment.linux.base.yml  environment.linux.full.yml  environment.macos.base.yml  environment.macos.full.yml  environment.windows.base.yml  environment.windows.full.yml  pyproject.toml  requirements-lock-linux.txt  requirements-lock-macos.txt  requirements-lock-windows.txt  requirements-lock.txt
config/: config_example.yaml  config_example_continuous.yaml  config_example_pulse.yaml
cpp_dlc_live/: __init__.py  cli.py
cpp_dlc_live/analysis/: analyze.py  issues.py  metrics.py  plots.py
cpp_dlc_live/realtime/: app.py  camera.py  controller_base.py  controller_ni.py  debounce.py  dlc_runtime.py  issue_logger.py  logging_utils.py  recorder.py  roi.py
cpp_dlc_live/utils/: io_utils.py  session_prompt.py  (+1 more)
docs/: deeplabcut_gui_setup_zh.md  developer_guide_zh.md  new_computer_setup_en.md  new_computer_setup_zh.md  operator_guide_zh.md  user_guide_zh.md
requirements/: base.txt  dev.txt  dlc.txt  full-linux.txt  full-macos.txt  ni.txt
tests/: test_analysis_metrics.py  test_analysis_overlay_video.py  test_analysis_plots.py  test_batch_analysis.py  test_cli_multi.py  test_cli_offline.py  test_debounce.py  test_dlc_runtime_config.py  test_dlc_runtime_strict.py  test_issue_analysis.py  test_laser_controller_modes.py  test_laser_on_chambers.py  test_preview_fps.py  test_preview_keypoints.py  test_roi.py  test_session_naming.py  test_session_prompt.py
